--- a/.gitignore
+++ b/.gitignore
@@ -69,9 +69,8 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+*.env
 .env.test
-environments/
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -103,3 +102,5 @@ dist
 
 # TernJS port file
 .tern-port
+
+.vscode/
